# elastica-mcp-server

./: .gitignore  Makefile  README.md  pyproject.toml
elastica_mcp_server/: __init__.py  environment.py  instruction.py  rod_strategy.py  server.py
elastica_mcp_server/material/: __init__.py
elastica_mcp_server/models/: simulation_model.py
elastica_mcp_server/simulation/: __init__.py  environment.py  manager.py  rod_strategy.py
tests/core/: test_server.py
tests/integration/: test_snake.py
