[project]
name = "elastica-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyelastica",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
elastica_mcp_server = "elastica_mcp_server.server:main"

[tool.uv.sources]
pyelastica = { git = "https://github.com/GazzolaLab/PyElastica", branch = "update-0.3.3" }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.0.280",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "--cov=elastica_mcp_server --cov-report=term --cov-report=xml"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "elastica.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "C90", "N", "UP", "ANN", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "E501", "PLR2004", "S101"]

[tool.ruff.isort]
known-first-party = ["elastica_mcp_server"]
known-third-party = ["elastica", "mcp"]

[tool.coverage.run]
source = ["elastica_mcp_server"]
omit = ["tests/*", "*/__init__.py"]
